Fixed spacing

--- a/css/seven-segment.css
+++ b/css/seven-segment.css
@@ -1,7 +1,7 @@
 svg {
     /* border: tomato solid 3px; */
     width: 100%;
-    height: 250px;
+    height: 300px;
 }
 
 #display-all {
@@ -14,7 +14,7 @@ svg {
     letter-spacing: normal;
     text-align: center;
     color: #1c1d24;
-    margin-bottom: 54px;
+    margin-bottom: 190px;
 }
 
 svg #shape-all path {
@@ -51,7 +51,7 @@ svg #shape-all rect.active {
     letter-spacing: normal;
     text-align: center;
     color: #1c1d24;
-    margin-bottom: 41px;
+    margin-bottom: 190px;
 }
 
 svg #shape-num path {
